Did a little tinkering